# lidlboards

./: .git-blame-ignore-revs  manage.py  pyproject.toml  pyrightconfig.json
.github/workflows/: lighthouse-badger-easy.yml
lidlboards/: asgi.py  settings.py  urls.py  wsgi.py
pubg/: __init__.py  admin.py  api.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
pubg/management/commands/: get_new_forsen_games.py  recompute_killscores.py  recompute_player_stats.py
pubg/migrations/: 0001_initial.py  0002_player_is_forsen.py  0003_playermatchstats_duration.py  0004_remove_playermatchstats_duration_match_created_at_and_more.py  0005_match_nb_real_players_alter_match_created_at_and_more.py  0006_match_telemetry_url.py  0007_remove_match_telemetry_url_match_telemetry_data_gz.py  0008_alter_match_telemetry_data_gz.py  0009_match_forsen_died_to_match_nb_forsen_bot_kills_and_more.py  0010_rename_forsen_died_to_match_forsen_died_to_account.py  0011_match_forsen_died_to_cause.py  0012_player_deaths_player_games_sniped_player_kills.py  0013_website.py  0014_alter_website_last_update.py  0015_match_forsen_final_rank.py  0016_playermatchstats_forsen_final_rank_and_more.py  0017_player_killscore.py  0018_player_pubg_player_name_f5804c_idx.py
pubg/static/: lidlboards.css
pubg/templates/: base.html  table.html
pubg/templates/pubg/: player.html  player_list.html  search_results.html
pubg/templatetags/: active.py
