[tool.poetry]
name = "lidlboards"
version = "0.1.0"
description = ""
authors = ["Ferdinand Ratajczak <ferdinand@fratajcz.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
requests = "^2.27.1"
python-dateutil = "^2.8.2"
django-tables2 = "^2.4.1"
gunicorn = "^20.1.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
